# tracking-course-content

./: .pre-commit-config.yaml  Dockerfile  README.md  README.rst  pyproject.toml
.github/: contributing.md
.github/workflows/: tests.yaml
book/: _config.yml  _toc.yml  requirements.txt
book/_build/.doctrees/: 01_Conditions.doctree  environment.pickle
book/_build/.doctrees/01_Recording/: 01_Conditions.doctree
book/_build/.doctrees/02_Tracking/: 01_Overview.doctree
book/_build/.doctrees/03_Analysing/: 01_Overview.doctree  02_notebooks.doctree
book/_build/html/: .buildinfo  01_Conditions.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
book/_build/html/01_Recording/: 01_Conditions.html
book/_build/html/02_Tracking/: 01_Overview.html
book/_build/html/03_Analysing/: 01_Overview.html  02_notebooks.html
book/_build/html/_static/: documentation_options.js
book/_build/jupyter_execute/03_Analysing/: 01_Overview.ipynb  02_notebooks.ipynb
docs/source/: Installation.rst  api.rst  conf.py  index.rst
notes/: overview.md  test-note.md
tests/: test_main.py
