[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=0.21.5"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry]
name = "trackingcourse"
version = "0.0.0"  # Do not change, let poetry-dynamic-versioning handle it.
homepage = "https://github.com/roaldarbol/tracking-course-content"
repository = "https://github.com/roaldarbol/tracking-course-content"
license = "Apache-2.0"
description = ""
authors = ["Mikkel Roald-Arbøl"]
readme = "README.rst"
packages = [{include = "trackingcourse"}]

[tool.poetry.scripts]

[tool.poetry.dependencies]
# Be as loose as possible if writing a library.
python = ">=3.8,<3.12"
jupyter-book = "^0.15.1"
jupyter = "^1.0.0"
jupyter-client = "^8.2.0"
requests = "^2.31.0"
numpy = "^1.24.3"
scipy = "^1.10.1"
matplotlib = "3.5.1"
scikit-learn = "^1.2.2"
torch = "^2.0.1"
ipywidgets = "^8.0.6"
xkcd = "^2.4.2"
decorator = "5.0.9"
ghp-import = "^2.1.0"
